k3s/ca/step-ca-ingress.yaml
# Ingress does not work here.
# Traefik could not verify TLS cert with DNS name as SAN,
# which is auto-generated by Step CA on its HTTP interface.
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: step-ca
spec:
  routes:
  - match: HostSNI(`step-ca.magicloud.lan`)
    services:
    - name: step-certificates
      port: 443
  tls:
    passthrough: true
